# Nexus

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF-INDEX.md  README.md  WHO-TO-USE.md  docker-compose.yml  drizzle.config.ts  nexus.db.bak  notes.md  package.json  playwright.calibre.config.ts  playwright.config.ts  pnpm-lock.yaml  server.js  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
codex-advising/: HANDOFF-FILE-WORKFLOW.md  HANDOFF-STRUCTURE.md  HOW-TO-ASK-CODEX.md  QUALITY-BAR.md  README.md  REQUEST-TEMPLATE.md  REVIEW-CHECKLIST.md  SPAWNER-SPEC.md  START-HERE.md  STATUS.md  TOPIC-TEMPLATE.md  bazarr-semantics-audit.md  bazarr-subtitles.md  competitor-positioning.md  cross-service-identity.md  integration-naming-audit.md  issue-code-audit.md  messaging-positioning.md  mobile-tv-strategy.md  public-copy-audit.md  seerr-migration.md  seerr-parity-audit.md  ui-string-audit-deep.md  ui-string-audit.md  website-scope.md
docs/: BACKEND.md  ROADMAP.md  SMOKE-TEST.md
drizzle/: 0000_mysterious_beyonder.sql  0001_wandering_wildside.sql  0002_silly_living_mummy.sql  0003_magical_captain_cross.sql  0004_worthless_franklin_richards.sql  0005_encrypt_stored_password.sql  0006_play_sessions_canonical.sql  0007_backfill_activity_to_play_sessions.sql  0008_drop_activity_table.sql  (+7 more)
stream-proxy/: Cargo.toml
stream-proxy/src/: cache.rs  lib.rs  main.rs  proxy.rs  session.rs
stream-proxy/src/handlers/: hls.rs  invidious.rs  mod.rs  session.rs
stream-proxy/tests/: session_integration.rs
(+753 files in other folders)
