[package]
name = "nexus-stream-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dashmap = "6"
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
