[package]
name = "nexus-stream-proxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "nexus_stream_proxy"
path = "src/lib.rs"

[[bin]]
name = "nexus-stream-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dashmap = "6"
socket2 = "0.5"
urlencoding = "2.1.3"
m3u8-rs = "6"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
